@@ -1,6 +1,6 @@
 extern int checker(int  , int  , char * );
-extern char * getmemWithLine(int  , char *  , int );
-extern char * saymemWithLine(char *  , int  , int  , int );
+extern const char* getmemWithLine(int  , const char*  , int );
+extern const char* saymemWithLine(const char*  , int  , int  , int );
 extern void myfree(void *  , int );
 extern XPoint getWindowPositionXY(Display *  , Window );
 extern XPoint getWindowSizeXY(Display *  , Window );
